src/objects/NCP_Service_Tile__mdt.object
<CustomObject>
    <fields>
        <fullName>NCP_Default_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NCP_Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCP_Entitlement_Access_Type__c</fullName>
        <label>Entitlement Access Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AcSys</fullName>
                    <isActive>false</isActive>
                    <label>AcSys</label>
                </value>
                <value>
                    <fullName>AcSys Portal</fullName>
                </value>
                <value>
                    <fullName>AHC</fullName>
                </value>
                <value>
                    <fullName>ALED</fullName>
                </value>
                <value>
                    <fullName>Alerts</fullName>
                    <isActive>false</isActive>
                    <label>Alerts</label>
                </value>
                <value>
                    <fullName>Allview</fullName>
                    <isActive>false</isActive>
                    <label>Allview</label>
                </value>
                <value>
                    <fullName>askAL</fullName>
                </value>
                <value>
                    <fullName>ask AL</fullName>
                    <isActive>false</isActive>
                    <label>ask AL</label>
                </value>
                <value>
                    <fullName>ASLM</fullName>
                </value>
                <value>
                    <fullName>Assignment Details</fullName>
                    <isActive>false</isActive>
                    <label>Assignment Details</label>
                </value>
                <value>
                    <fullName>CAPS</fullName>
                </value>
                <value>
                    <fullName>CAPS Internal</fullName>
                </value>
                <value>
                    <fullName>CARES</fullName>
                </value>
                <value>
                    <fullName>Case Handling</fullName>
                </value>
                <value>
                    <fullName>Case Handling: CARES</fullName>
                    <isActive>false</isActive>
                    <label>Case Handling: CARES</label>
                </value>
                <value>
                    <fullName>Case Handling: Help Desk</fullName>
                    <isActive>false</isActive>
                    <label>Case Handling: Help Desk</label>
                </value>
                <value>
                    <fullName>Case Handling: Test service1</fullName>
                </value>
                <value>
                    <fullName>CH</fullName>
                </value>
                <value>
                    <fullName>CHHWS</fullName>
                </value>
                <value>
                    <fullName>ClicS</fullName>
                </value>
                <value>
                    <fullName>Collaboration: Services Collaboration</fullName>
                    <isActive>false</isActive>
                    <label>Collaboration: Services Collaboration</label>
                </value>
                <value>
                    <fullName>Collaboration: Sharenet-IMS</fullName>
                    <isActive>false</isActive>
                    <label>Collaboration: Sharenet-IMS</label>
                </value>
                <value>
                    <fullName>Collaboration: Sharepoint Global</fullName>
                    <isActive>false</isActive>
                    <label>Collaboration: Sharepoint Global</label>
                </value>
                <value>
                    <fullName>Configurators (US Only)</fullName>
                </value>
                <value>
                    <fullName>Co-Op Marketing</fullName>
                    <isActive>false</isActive>
                    <label>Co-Op Marketing</label>
                </value>
                <value>
                    <fullName>Cover</fullName>
                </value>
                <value>
                    <fullName>CPM - Collaboration</fullName>
                    <isActive>false</isActive>
                    <label>CPM - Collaboration</label>
                </value>
                <value>
                    <fullName>CRONOS</fullName>
                    <isActive>false</isActive>
                    <label>CRONOS</label>
                </value>
                <value>
                    <fullName>Discovery Center</fullName>
                </value>
                <value>
                    <fullName>Discovery Center (Skylab)</fullName>
                    <isActive>false</isActive>
                    <label>Discovery Center (Skylab)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NCP_Horizontal_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Horizontal User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NCP_Image_Name__c</fullName>
        <description>Choose which icon should be displayed on this service tile</description>
        <label>Image name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>notification</fullName>
                    <label>Bell</label>
                </value>
                <value>
                    <fullName>broadcast</fullName>
                    <label>Broadcast</label>
                </value>
                <value>
                    <fullName>macros</fullName>
                    <label>Chevrons right</label>
                </value>
                <value>
                    <fullName>record_create</fullName>
                    <label>Clipboard</label>
                </value>
                <value>
                    <fullName>campaign</fullName>
                    <label>Dart board</label>
                </value>
                <value>
                    <fullName>ncp_icon_database</fullName>
                    <label>Database</label>
                </value>
                <value>
                    <fullName>ncp_icon_download</fullName>
                    <label>Download</label>
                </value>
                <value>
                    <fullName>delete</fullName>
                    <label>Dustbin</label>
                </value>
                <value>
                    <fullName>graph</fullName>
                    <label>Graph</label>
                </value>
                <value>
                    <fullName>groups</fullName>
                    <label>Group of people</label>
                </value>
                <value>
                    <fullName>hierarchy</fullName>
                    <label>Hierarchy</label>
                </value>
                <value>
                    <fullName>crossfilter</fullName>
                    <label>Interlocking Rings</label>
                </value>
                <value>
                    <fullName>color_swatch</fullName>
                    <label>Keys</label>
                </value>
                <value>
                    <fullName>light_bulb</fullName>
                    <label>Light bulb</label>
                </value>
                <value>
                    <fullName>connected_apps</fullName>
                    <label>Lightning bolt</label>
                </value>
                <value>
                    <fullName>thunder</fullName>
                    <label>Mallett</label>
                </value>
                <value>
                    <fullName>location</fullName>
                    <label>Map</label>
                </value>
                <value>
                    <fullName>ncp_icon_metrics</fullName>
                    <label>Metrics</label>
                </value>
                <value>
                    <fullName>ncp_icon_moneybag</fullName>
                    <label>Money bag</label>
                </value>
                <value>
                    <fullName>edit_form</fullName>
                    <label>Note pad</label>
                </value>
                <value>
                    <fullName>knowledge_base</fullName>
                    <default>true</default>
                    <label>Open book</label>
                </value>
                <value>
                    <fullName>attach</fullName>
                    <label>Paperclip</label>
                </value>
                <value>
                    <fullName>chart</fullName>
                    <label>Pie chart</label>
                </value>
                <value>
                    <fullName>feed</fullName>
                    <label>Pulse</label>
                </value>
                <value>
                    <fullName>setup_assistant_guide</fullName>
                    <label>Rocket</label>
                </value>
                <value>
                    <fullName>approval</fullName>
                    <label>Rubber stamp</label>
                </value>
                <value>
                    <fullName>ncp_icon_shield</fullName>
                    <label>Shield</label>
                </value>
                <value>
                    <fullName>custom_apps</fullName>
                    <label>Spanner</label>
                </value>
                <value>
                    <fullName>favorite</fullName>
                    <label>Star</label>
                </value>
                <value>
                    <fullName>case</fullName>
                    <label>Suitcase</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NCP_Image_URL__c</fullName>
        <label>Image URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCP_Internal_User_Service__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Internal User Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NCP_Key_Users__c</fullName>
        <inlineHelpText>You can use &apos;;&apos; separator to add several email addresses</inlineHelpText>
        <label>Key Users</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCP_Priority__c</fullName>
        <description>The number entered in this field determines the order in which the services tiles are presented with the lower the number the more important (and thus higher up the list) the tile is.</description>
        <inlineHelpText>Leave space for additional services to be inserted between existing ones - eg., use multiples of 10 to start with so the first service in the list is 10, the second is 20 etc. So an additional service can be inserted at 15 if required.</inlineHelpText>
        <label>Priority</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NCP_Public_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NCP_QA_URL__c</fullName>
        <label>QA URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCP_Title__c</fullName>
        <label>Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCP_URL__c</fullName>
        <label>URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Service Tile</label>
    <listViews>
        <fullName>All_Service_Tiles</fullName>
        <columns>MasterLabel</columns>
        <columns>NCP_Title__c</columns>
        <columns>NCP_Priority__c</columns>
        <columns>NCP_Internal_User_Service__c</columns>
        <columns>NCP_Public_Access__c</columns>
        <columns>NCP_Default_Access__c</columns>
        <columns>NCP_Description__c</columns>
        <columns>NCP_QA_URL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Service Tiles</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_All_Service_Tiles</fullName>
        <columns>MasterLabel</columns>
        <columns>NCP_Title__c</columns>
        <columns>NCP_Priority__c</columns>
        <columns>NCP_Internal_User_Service__c</columns>
        <columns>NCP_Public_Access__c</columns>
        <columns>NCP_Default_Access__c</columns>
        <columns>NCP_Description__c</columns>
        <columns>DeveloperName</columns>
        <filterScope>Everything</filterScope>
        <label>All Service Tiles</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Service Tiles</pluralLabel>
</CustomObject>